<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_location">Change Location</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="pref_location_key" translatable="false">WeatherLocation</string>
    <!-- Label for the location preference [CHAR_LIMIT=30] -->
    <string name="pref_location_label">Weather Location</string>

    <!-- Summary for the location preference [CHAR_LIMIT=120] -->
    <string name="pref_location_summary">City which we will display weather for</string>

    <string name="pref_location_default" translatable="false">Tallinn</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <string name="main_location">Location</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- I18N-friendly temperature string -->
    <string name="formatted_temperature">
        <xliff:g id="temp">%1.0f</xliff:g> C\u00B0
    </string>

    <!-- Windspeed formats -->
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="formatted_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="formatted_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Stubs -->
    <string name="stub_date">June 15</string>
    <string name="stub_max_temp">100 C</string>
    <string name="stub_min_temp">-273 C</string>
    <string name="stub_weather_conditions">Nuclear Rain</string>
    <string name="stub_humidity">100%</string>
    <string name="stub_wind">6 km/h NW</string>
    <string name="stub_pressure">1014 hPa</string>

    <string name="access_text_location_icon">Weather Location</string>

    <string name="location_selected_update_text">Select or update current location:</string>
    <string name="location_or_from_recent">or select from recent locations:</string>

    <string name="location_dialog_show_map">Show on map</string>
    <string name="location_dialog_change">Change location</string>
    <string name="ok">OK</string>
    <string name="stub_location">Planet Earth</string>

    <!-- Sync Adapter stuff -->
    <string name="sync_account_type">sunshine.example.com</string>
    <!-- This should be the same as ContentProvider Uri -->
    <string name="content_authority">com.example.android.sunshine.app</string>
    <string name="sync_account_name">Sunshine Weather Sync</string>

    <!-- Notification Format -->
    <string name="app_name_for_notification">Sunshine Weather</string>
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notifications -->
    <string name="pref_notifications_subscreen_key" translatable="false">notification_subscreen_key</string>
    <string name="pref_notifications_subscreen_label">Notifications</string>
    <string name="pref_notifications_subscreen_summary">Configure Notifications</string>

    <string name="pref_on_update_notifications_group_label">On Update Notifications</string>
    <string name="pref_on_update_notifications_group_key" translatable="false">on_update_notification_group</string>

    <string name="pref_enable_on_update_notifications_label">Notifications on weather update </string>
    <string name="pref_enable_on_update_notifications_key" translatable="false">enable_on_update</string>
    <string name="pref_enable_on_update_notifications_false">Receive notification each time when weather is updated</string>
    <string name="pref_enable_on_update_notifications_true">Enabled</string>
    <string name="pref_enable_on_update_notifications_default" translatable="false">false</string>

    <string name="pref_daily_notifications_group_label">Daily Notifications</string>
    <string name="pref_daily_notifications_group_key">daily_notifications</string>

    <string name="pref_daily_notifications_subsubscreen_label">Daily Notifications</string>
    <string name="pref_daily_notifications_subsubscreen_key" translatable="false">daily_key</string>
    <string name="pref_daily_notifications_subsubscreen_summary">Forecasts delivered twice a day</string>

    <string name="pref_enable_daily_notifications_key" translatable="false">enable_daily_notifications</string>
    <string name="pref_enable_daily_notifications_label">Daily Forecast Notifications</string>
    <string name="pref_enable_daily_notifications_true">Enabled</string>
    <string name="pref_enable_daily_notifications_false">Not Enabled</string>
    <string name="pref_enable_daily_notifications_default" translatable="false">false</string>

    <string name="pref_morning_notification_group_label">Morning</string>
    <string name="pref_morning_notification_group_key" translatable="false">morning_key</string>
    <string name="pref_enable_morning_notification_label">Notification at morning</string>
    <string name="pref_enable_morning_notification_key" translatable="false">enable_morning</string>
    <string name="pref_enable_morning_notification_false">Not Enabled</string>
    <string name="pref_enable_morning_notification_true">Enabled</string>
    <string name="pref_enable_morning_notification_default" translatable="false">false</string>
    <string name="pref_time_morning_notification_label">Time</string>
    <string name="pref_time_morning_notification_key" translatable="false">morning_time</string>
    <string name="pref_time_morning_notification_default" translatable="false">09:00</string>

    <string name="pref_evening_notification_group_label">Evening</string>
    <string name="pref_evening_notification_group_key" translatable="false">evening_key</string>
    <string name="pref_enable_evening_notification_label">Notification at Evening</string>
    <string name="pref_enable_evening_notification_key" translatable="false">enable_evening</string>
    <string name="pref_enable_evening_notification_false">Not Enabled</string>
    <string name="pref_enable_evening_notification_true">Enabled</string>
    <string name="pref_enable_evening_notification_default" translatable="false">false</string>
    <string name="pref_time_evening_notification_label">Time</string>
    <string name="pref_time_evening_notification_key" translatable="false">evening_time</string>
    <string name="pref_time_evening_notification_default" translatable="false">18:00</string>

    <!-- TimePicker dialog for settings -->
    <string name="time_picker_dialog_set_button_text">Set</string>
    <string name="time_picker_dialog_cancel_button_text">Cancel</string>


</resources>
