<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/detail_day_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            />
        <TextView
            android:id="@+id/detail_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stub_date"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/detail_high_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stub_max_temp"
                    />
                <TextView
                    android:id="@+id/detail_low_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stub_min_temp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/detail_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher"/>
                <TextView
                    android:id="@+id/detail_conditions_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stub_weather_conditions"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/detail_humidity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stub_humidity"
            />
        <TextView
            android:id="@+id/detail_wind_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stub_wind"
            />
        <TextView
            android:id="@+id/detail_pressure_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stub_pressure"
            />
    </LinearLayout>
</ScrollView>
