<!-- Master layout. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/detail_fragment_padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!-- Header: Day, Date -->
            <TextView
                android:id="@+id/detail_day_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="30sp"
                android:text="@string/today"
                />

            <TextView
                android:id="@+id/detail_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="24sp"
                android:textColor="@color/saratov"
                android:text="@string/stub_date"
                />

        </LinearLayout>

        <!-- Main content: high, low, art, weather state -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:gravity="left"
            >

            <TextView
                android:id="@+id/detail_high_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/detail_high_temp_text_size"
                android:text="@string/stub_max_temp"
                />

            <TextView
                android:id="@+id/detail_low_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/low_temp_padding"
                android:paddingRight="@dimen/low_temp_padding"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/detail_low_temp_text_size"
                android:textColor="@color/saratov"
                android:text="@string/stub_min_temp"
                />

            <!-- Humidity, wind, pressure -->
            <TextView
                android:id="@+id/detail_humidity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="28sp"
                android:text="@string/stub_humidity"
                />

            <TextView
                android:id="@+id/detail_pressure_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="28sp"
                android:text="@string/stub_pressure"
                />

            <TextView
                android:id="@+id/detail_wind_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="28sp"
                android:text="@string/stub_wind"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/detail_conditions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="24sp"
                android:textColor="@color/saratov"
                android:text="@string/stub_weather_conditions"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>